packages/preview/ucph-nielsine-touying/0.1.3/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

<details>
<summary>Migration guide from v0.1.X</summary>

<!-- Write migration guide here -->

</details>

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [0.1.3] - 2026-03-13

### Changed
- Bumped `Touying` version to 0.6.3.
- Exposed `header-block-size` & `header-block-text-size` to user
- Increased default `header-block-size` & `header-block-text-size`
- Removed Fira Math as default math font

## [0.1.2] - 2025-10-28

### Changed
- [Works with `typst` 0.14.0].
- Updated optional dependencies (`theorion`).

### Fixed 
- No bold text for current section.
- White cite color in heading, blue in main text.

## [0.1.1] - 2025-07-21

### Added
- logos.typ
- Examples with `pinit`and `theorion`.
- Language option - `en` or `dk` -> changes logo on `uc.focus-slide()` to Danish/English version. 

### Changed
- Default font to [*Fira Sans*](https://fonts.google.com/specimen/Fira+Sans) and [*Fira Math*](https://github.com/firamath/firamath).
- Screenshots of template.
- Logos are no longer included under `/assets`-folder in template, but are accessed as `uc.logos.seal`.
- Color scheme: Secondary color is UCPH-medium gray.

### Fixed
- Issue with heading (#1): Could not write in **BOLD**. 

## [0.1.0] - 2025-07-03

### Added

<!-- Describe the feature set of the initial release here -->
- Based on the `metropolis` Touying theme
- Adapted to fit the styling of University of Copenhagen
- Section links in the footer
- Exposing more custom options for the user than originally available

<!--
Below are the target URLs for each version
You can link version numbers (in level-2 headings)
to the corresponding tag on GitHub, or the diff
in comparison to the previous release
-->

[Unreleased]: https://github.com/jorgenhost/ucph-nielsine-touying/compare/v0.1.0...HEAD
[0.1.0]: https://github.com/jorgenhost/ucph-nielsine-touying/releases/tag/v0.1.0
[0.1.1]: https://github.com/jorgenhost/ucph-nielsine-touying/releases/tag/v0.1.1
[0.1.2]: https://github.com/jorgenhost/ucph-nielsine-touying/releases/tag/v0.1.2
[0.1.3]: https://github.com/jorgenhost/ucph-nielsine-touying/releases/tag/v0.1.3